2005-09-28  Stefan Kost  <ensonic@users.sf.net>

	* gst/adder/gstadder.c: (gst_adder_collected):
          fix adder for float elements

2005-09-28  Wim Taymans  <wim@fluendo.com>

	* gst-libs/gst/audio/gstbaseaudiosink.c:
	(gst_base_audio_sink_class_init),
	(gst_base_audio_sink_provide_clock), (gst_base_audio_sink_render):
	* gst-libs/gst/audio/gstbaseaudiosrc.c:
	(gst_base_audio_src_class_init),
	(gst_base_audio_src_provide_clock):
	get_clock -> provide_clock

2005-09-28  Andy Wingo  <wingo@pobox.com>

	* gst/videotestsrc/gstvideotestsrc.c: Implement live source mode
	and unlocking.

	* gst/sine/gstsinesrc.c (gst_sinesrc_unlock): Actually implement
	unlocking.

	* gst/tcp/gsttcpclientsink.c (gst_tcpclientsink_base_init):
	Actually add the pad template.
	(gst_tcpclientsink_get_type): We're a base sink. Woot, works.

	* gst/tcp/gsttcpserversrc.c: Go ahead and fix up serversrc while
	I'm at it...

	* gst/tcp/gsttcpclientsrc.c: Make interruptable -- code stolen
	from fdsrc. Get caps in create() instead of start() so it can be
	interrupted. Interruption somewhat untested.

	* gst/tcp/gsttcp.c (gst_tcp_read_buffer, gst_tcp_socket_read):
	Proper EOS handling.

2005-09-27  Andy Wingo  <wingo@pobox.com>

	* gst/tcp/gsttcpclientsrc.c: Cleaned up.

	* gst/tcp/gsttcpserversrc.c: Cleaned up.

	* gst/tcp/gsttcpclientsrc.c: Updated for new gsttcp API.

	* gst/tcp/gsttcp.h: 
	* gst/tcp/gsttcp.c (gst_tcp_read_buffer): New function, factored
	out of tcpclientsrc.c. Cancellable.
	(gst_tcp_socket_read): Made private, cancellable, with better
	diagnostics. Also the FIONREAD ioctl takes a int*, not a size_t*.
	(gst_tcp_gdp_read_buffer): Made cancellable, actually returns the
	whole buffer, and better diagnostics.
	(gst_tcp_gdp_read_caps): Same.

	* gst/sine/gstsinesrc.c (gst_sinesrc_wait): Add the base time.

2005-09-26  Andy Wingo  <wingo@pobox.com>

	* gst/sine/gstsinesrc.h:
	* gst/sine/gstsinesrc.c: Refactor, remove the table lookup code,