@@ -31,7 +31,7 @@ noinst_HEADERS = \
 	gststreaminfo.h \
 	gststreamselector.h
 
-noinst_PROGRAMS = test decodetest test2 test3 test4
+noinst_PROGRAMS = test decodetest test2 test3 test4 test5
 
 test_LDADD = $(GST_LIBS) 
 test_CFLAGS = $(GST_CFLAGS)
@@ -44,6 +44,9 @@ test3_CFLAGS = $(GST_CFLAGS)
 
 test4_LDADD = $(GST_LIBS) 
 test4_CFLAGS = $(GST_CFLAGS)
+
+test5_LDADD = $(GST_LIBS) 
+test5_CFLAGS = $(GST_CFLAGS)
 
 decodetest_LDADD = $(GST_LIBS) 
 decodetest_CFLAGS = $(GST_CFLAGS)
